syntax = "proto3";

package met;

import "brutus/proto/message.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/mattgonewild/brutus/met/proto";

service Met {
  rpc Report(stream brutus.Worker) returns (stream brutus.Status);
  rpc GetWorkers (google.protobuf.Empty) returns (brutus.WorkersResponse); // TODO: ...
  rpc GetWorker (brutus.WorkerRequest) returns (brutus.WorkerResponse);
  rpc GetWorkerProc (brutus.WorkerRequest) returns (brutus.ProcResponse);
  rpc GetWorkerCpu (brutus.WorkerRequest) returns (brutus.CpuResponse);
  rpc GetWorkerMem (brutus.WorkerRequest) returns (brutus.MemResponse);
  rpc GetWorkerNet (brutus.WorkerRequest) returns (brutus.NetResponse);
  rpc GetWorkerUptime (brutus.WorkerRequest) returns (brutus.UptimeResponse);
  rpc GetWorkerLoadAvg (brutus.WorkerRequest) returns (brutus.LoadAvgResponse);
  rpc GetPoolLoad (brutus.PoolLoadRequest) returns (brutus.PoolLoadResponse);
  rpc Shutdown (google.protobuf.Empty) returns (google.protobuf.Empty);
}
